# Soochi

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  feeds.yaml  main.py  pyproject.toml  requirements.txt  testfeeds.yaml
resources/: Dockerfile.gemini  soochi-docker-compose.yaml  soochi-job-fetch-docker-compose.yaml  soochi-job-fetch.Dockerfile  soochi-job-scheduler-docker-compose.yaml  soochi-job-scheduler.Dockerfile  soochi.Dockerfile
soochi/: config.py  constants.py  factory.py  fetch_batch_status.py  gemini_processor.py  logger.py  main.py  mongodb_client.py  openai_publisher.py  openai_subscriber.py  pipeline.py  pre_requesites.py  sqlite3_client.py
soochi/models/: idea.py
soochi/prompts/: idea_extractor.txt
soochi/services/: ai_service.py  gemini_service.py  notion_service.py  openai_service.py  url_service.py  vector_service.py
soochi/utils/: config.py  constants.py  fetch_utils.py  logger.py  mongodb_client.py  utils.py
src/: config.py  content_analysis.py  content_crawl.py  link_discovery.py  logger.py  output_to_notion.py  prerequisites.py  utils.py
tests/: test_gemini_service.py  test_notion_service.py  test_pinecone_notion_integration.py  test_pinecone_notion_sync.py  test_pipeline.py  test_vector_service.py
vicharx/: constants.py  main.py  pre_requesites.py
