[tool.poetry]
name = "vicharx"
version = "0.1.0"
description = ""
authors = ["Vivek Hegde <vicharx@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
vicharx = "vicharx.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "0.12.3"
notion-client = "2.2.1"
trafilatura = "1.12.0"
ollama = "^0.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
