[tool.poetry]
name = "soochi"
version = "0.1.0"
description = ""
authors = ["Vivek Hegde <soochi@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
soochi = "soochi.main:app"

[tool.poetry.dependencies]
python = "^3.12"
trafilatura = "1.12.0"
feedparser = "6.0.11"
openai = "1.57.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
